--- a/assets/styles.less
+++ b/assets/styles.less
@@ -5,13 +5,16 @@ body {
   font-size: 14px;
   line-height: 1.8em;
 }
+
 a {
   text-decoration: none;
   color: #f37777;
 }
+
 a:hover {
   text-decoration: underline;
 }
+
 #wrapper {
   width: 1024px;
   max-width: 100%;
@@ -19,6 +22,7 @@ a:hover {
   margin: 0 auto;
   background: #f9f9f9;
 }
+
 header {
   display: flex;
   align-items: flex-end;
@@ -26,35 +30,42 @@ header {
   padding-bottom: 30px;
   padding-top: 60px;
 }
+
 .avatar {
   width: 300px;
 }
+
 .info {
   width: 100%;
   padding: 0px 30px;
 }
+
 .avatar img {
   max-width: 100%;
   height: auto;
 }
+
 .detail {
   display: flex;
   justify-content: space-between;
   border-top: 2px solid #eee;
   margin-top: 40px;
 }
+
 h1.title {
   font-size: 53px;
   color: #f37777;
   margin: 0;
   line-height: 53px;
 }
+
 p.work {
   font-weight: normal;
   font-size: 24px;
   color: #ABABAC;
   margin: 9px 0 30px;
 }
+
 p.sub {
   font-size: 26px;
   margin: 0;
@@ -67,10 +78,12 @@ footer {
   border-top: 2px solid #eee;
   padding: 20px;
 }
+
 section {
   border-bottom: 1px solid #eee;
   padding: 60px 0;
 }
+
 h3.title {
   font-size: 36px;
   letter-spacing: 1px;
@@ -80,25 +93,31 @@ h3.title {
   font-weight: 500;
   line-height: 1.8em;
 }
+
 section:last-child {
   border-bottom: 0;
 }
-.detail ul {
-  line-height: 1.6em;
-  padding-left: 20px;
+
+.detail {
+  ul {
+    line-height: 1.6em;
+    padding-left: 20px;
+  }
+  h5.title {
+    text-transform: uppercase;
+    font-size: 14px;
+    margin-bottom: 15px;
+  }
 }
-.detail h5.title {
-  text-transform: uppercase;
-  font-size: 14px;
-  margin-bottom: 15px;
+
+ul {
+  li {
+    margin-bottom: 10px;
+    &:last-child {
+      margin-bottom: 0;
+    }
+  }
+  ul {
+    margin-top: 10px;
+  }
 }
-ul li {
-  margin-bottom: 10px;
-}
-ul li:last-child {
-  margin-bottom: 0;
-}
-ul ul {
-  margin-top: 10px;
-}
-/*# sourceMappingURL=styles.css.map */
